@@ -15,16 +15,8 @@ ENV TZ=Asia/Ho_Chi_Minh \
     LANG=en_US.UTF-8 \
     LANGUAGE=en_US.UTF-8
 
-# Cài wget, unzip, rồi cài Flyway CLI
-RUN apt-get update && \
-    apt-get install -y wget unzip && \
-    wget -O flyway-commandline.tar.gz https://repo1.maven.org/maven2/org/flywaydb/flyway-commandline/8.5.13/flyway-commandline-8.5.13-linux-x64.tar.gz && \
-    tar -xzf flyway-commandline.tar.gz && \
-    mv flyway-*/flyway /usr/local/bin/flyway && \
-    chmod +x /usr/local/bin/flyway
-
 # Cấu hình Java runtime
-ENV JAVA_TOOL_OPTIONS="-Djava.awt.headless=true --enable-native-access=ALL-UNNAMED" \
+ENV JAVA_TOOL_OPTIONS="-Djava.awt.headless=true" \
     JAVA_OPTS="-Xmx512m -Xms256m -XX:+UseG1GC -XX:+UseStringDeduplication -Djava.security.egd=file:/dev/./urandom"
 
 # Chỉ định thư mục làm việc (tốt cho clarity và COPY)
@@ -41,5 +33,4 @@ EXPOSE 8081
 
 # Lệnh chạy ứng dụng
 # ENTRYPOINT ["java", "-jar", "/app.jar"]
-# ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar ./app.jar"]
-ENTRYPOINT ["/entrypoint.sh"]
+ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar ./app.jar"]
